Further implemented the scroll bars, and added the necessary scroll bar settings

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -226,5 +226,12 @@
     <string name="sort_by_artist">Ordenar por artista</string>
     <string name="sort_by_album">Ordenar por álbum</string>
     <string name="secondary_line_of_text">Línea secundaria de texto</string>
+    <string name="scrollbar">Barra de Desplazamiento</string>
+    <string name="scrollbar_to_the_left">Colocar las barras de desplazamiento en el lado izquierdo</string>
+    <string name="scrollbar_playlist">Tipo de barra de desplazamiento para mostrar en la lista de reproducción</string>
+    <string name="scrollbar_browser_type">Tipo de barra de desplazamiento para mostrar al añadir canciones</string>
+    <string name="system_integrated">Integrada con el sistema</string>
+    <string name="large">Grande</string>
+    <string name="indexed_if_possible">Indexada (si es posible)</string>
     
 </resources>
