--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -226,5 +226,12 @@
     <string name="sort_by_artist">Сортировать по исполнитель</string>
     <string name="sort_by_album">Сортировать по альбом</string>
     <string name="secondary_line_of_text">Вторичный строка текста</string>
+    <string name="scrollbar">Полоса прокрутки</string>
+    <string name="scrollbar_to_the_left">Поместите полосы прокрутки с левой стороны</string>
+    <string name="scrollbar_playlist">Полоса прокрутки для отображения в списке воспроизведения</string>
+    <string name="scrollbar_browser_type">Полоса прокрутки для отображения при добавлении песни</string>
+    <string name="system_integrated">Интегрированное с системой</string>
+    <string name="large">Большой</string>
+    <string name="indexed_if_possible">Индексированные (если это возможно)</string>
     
 </resources>
