--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -226,5 +226,12 @@
     <string name="sort_by_artist">Sort by artist</string>
     <string name="sort_by_album">Sort by album</string>
     <string name="secondary_line_of_text">Secondary line of text</string>
+    <string name="scrollbar">Scroll Bar</string>
+    <string name="scrollbar_to_the_left">Place scroll bars to the left side</string>
+    <string name="scrollbar_playlist">Type of scroll bar to show in the playlist</string>
+    <string name="scrollbar_browser_type">Type of scroll bar to show when adding songs</string>
+    <string name="system_integrated">Integrated with the system</string>
+    <string name="large">Large</string>
+    <string name="indexed_if_possible">Indexed (if possible)</string>
     
 </resources>
