--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -83,7 +83,7 @@
     <string name="up">Arriba</string>
     <string name="home">Inicio</string>
     <string name="add_url_title">Añadir URL</string>
-    <string name="add_url">Añadir URL&#8230;</string>
+    <string name="add_url">URL&#8230;</string>
     <string name="url">URL</string>
     <string name="description">Descripción</string>
     <string name="favorite">Favorito</string>
@@ -237,5 +237,6 @@
     <string name="opengl_error"> Error OpenGL </string>
     <string name="opengl_not_supported"> No hay soporte para OpenGL ES 2.0</string>
     <string name="speed">Velocidad</string>
+    <string name="add_radio">Radio&#8230;</string>
     
 </resources>
