--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -238,5 +238,8 @@
     <string name="opengl_not_supported"> OpenGL ES 2.0 не поддерживается</string>
     <string name="speed">Скорость</string>
     <string name="add_radio">Радио&#8230;</string>
+    <string name="search">Искать</string>
+    <string name="genre">Жанр</string>
+    <string name="search_term">Критерии поиска</string>
     
 </resources>
