--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -248,5 +248,6 @@
     <string name="no_stations">Ninguna estación de radio ha sido encontrada :(\n\nToque aquí para ver sus estaciones de radio favoritas :)</string>
     <string name="expand_seek_bar">Expandir la barra de búsqueda antes de buscar</string>
     <string name="by_dir_xiph_org">Por Icecast - &lt;a href=\"http://dir.xiph.org\"&gt;dir.xiph.org&lt;/a&gt;</string>
+    <string name="creamy">Cremoso</string>
     
 </resources>
