--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -248,5 +248,6 @@
     <string name="no_stations">Невозможно найти радиостанции :(\n\nНажмите здесь, чтобы просмотреть свои любимые радиостанции :)</string>
     <string name="expand_seek_bar">Развернуть искать бар перед поиском</string>
     <string name="by_dir_xiph_org">От Icecast - &lt;a href=\"http://dir.xiph.org\"&gt;dir.xiph.org&lt;/a&gt;</string>
+    <string name="creamy">Сливочный</string>
     
 </resources>
