--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -248,5 +248,6 @@
     <string name="no_stations">No radio stations found :(\n\nTouch here to view your favorite radio stations :)</string>
     <string name="expand_seek_bar">Expand the seek bar before seeking</string>
     <string name="by_dir_xiph_org">By Icecast - &lt;a href=\"http://dir.xiph.org\"&gt;dir.xiph.org&lt;/a&gt;</string>
+    <string name="creamy">Creamy</string>
     
 </resources>
