--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -249,5 +249,8 @@
     <string name="expand_seek_bar">Expandir a barra de busca antes de buscar</string>
     <string name="by_dir_xiph_org">Por Icecast - &lt;a href=\"http://dir.xiph.org\"&gt;dir.xiph.org&lt;/a&gt;</string>
     <string name="creamy">Creme</string>
-    
+    <string name="transition">Transição</string>
+    <string name="fade">Fade</string>
+    <string name="zoom">Zoom</string>
+
 </resources>
