--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -249,5 +249,8 @@
     <string name="expand_seek_bar">Expand the seek bar before seeking</string>
     <string name="by_dir_xiph_org">By Icecast - &lt;a href=\"http://dir.xiph.org\"&gt;dir.xiph.org&lt;/a&gt;</string>
     <string name="creamy">Creamy</string>
-    
+    <string name="transition">Transition</string>
+    <string name="fade">Fade</string>
+    <string name="zoom">Zoom</string>
+
 </resources>
