--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -249,5 +249,8 @@
     <string name="expand_seek_bar">Развернуть искать бар перед поиском</string>
     <string name="by_dir_xiph_org">От Icecast - &lt;a href=\"http://dir.xiph.org\"&gt;dir.xiph.org&lt;/a&gt;</string>
     <string name="creamy">Сливочный</string>
-    
+    <string name="transition">Переход</string>
+    <string name="fade">Вянуть</string>
+    <string name="zoom">Зуммировать</string>
+
 </resources>
