--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -254,5 +254,13 @@
     <string name="zoom">Zoom</string>
     <string name="repeat_all">Repeat all</string>
     <string name="repeat_one">Repeat one</string>
+    <string name="select_everything">Select everything</string>
+    <string name="unselect_everything">Unselect everything</string>
+    <string name="select">Select</string>
+    <string name="unselect">Unselect</string>
+    <string name="add_to_favorites">Add to favorites</string>
+    <string name="remove_from_favorites">Remove from favorites</string>
+    <string name="selected">Selected</string>
+    <string name="unselected">Unselected</string>
 
 </resources>
