--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -266,6 +266,8 @@
 
     <string name="bt_packages_sent">Pacotes enviados:</string>
     <string name="bt_sample_count">Amostras para enviar&#8230;</string>
+    <string name="bt_connect">Conectar a um dispositivo Bluetooth&#8230;</string>
+    <string name="bt_disconnect">Desconectar dispositivo Bluetooth</string>
     <string name="bt_start">Iniciar transmissão Bluetooth</string>
     <string name="bt_stop">Parar transmissão Bluetooth</string>
     <string name="bt_pairing">Por favor, tente conectar-se de novo depois de parear o dispositivo.</string>
