--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -262,10 +262,12 @@
     <string name="remove_from_favorites">Видалити з обраного</string>
     <string name="selected">Обраний</string>
     <string name="unselected">Не вибрано</string>
-    <string name="refresh_list">Refresh list</string>
+    <string name="refresh_list">Оновити список</string>
 
     <string name="bt_packages_sent">Packages sent:</string>
     <string name="bt_sample_count">Samples to send&#8230;</string>
+    <string name="bt_connect">Connect to Bluetooth device&#8230;</string>
+    <string name="bt_disconnect">Disconnect Bluetooth device</string>
     <string name="bt_start">Start Bluetooth Transmission</string>
     <string name="bt_stop">Stop Bluetooth Transmission</string>
     <string name="bt_pairing">Please, try to connect again after pairing the device.</string>
