--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -266,6 +266,8 @@
 
     <string name="bt_packages_sent">Packages sent:</string>
     <string name="bt_sample_count">Samples to send&#8230;</string>
+    <string name="bt_connect">Connect to Bluetooth device&#8230;</string>
+    <string name="bt_disconnect">Disconnect Bluetooth device</string>
     <string name="bt_start">Start Bluetooth transmission</string>
     <string name="bt_stop">Stop Bluetooth transmission</string>
     <string name="bt_pairing">Please, try to connect again after pairing the device.</string>
